# PicoWatch

./: .gitignore  CMakeLists.txt  build.zig  build.zig.zon  flake.nix  flash.sh  flashC.sh  flashZig.sh  main.c  notes.md  temp.zig
c_lib/: arithmetic.c  arithmetic2.c  arithmetic2.h  build.zig.txt  build.zig.zon.txt
c_reference_code/: CMakeLists.txt  main.c
c_reference_code/examples/: CMakeLists.txt
c_reference_code/examples/inc/: LCD_test.h  LVGL_example.h  lv_conf.h
c_reference_code/examples/src/: AMOLED_1in8_LVGL_test.c  LVGL_example.c
c_reference_code/lib/AMOLED/: AMOLED_1in8.c
c_reference_code/lib/Config/: DEV_Config.c  DEV_Config.h
c_reference_code/lib/QSPI_PIO/: qspi_pio.c  qspi_pio.h
c_reference_code/lib/Touch/: FT3168.c
examples/src/: ImageData.c  LVGL_example.c
lib/AMOLED/: AMOLED_1in8.c  AMOLED_1in8.h
lib/Config/: DEV_Config.c  DEV_Config.h  Debug.h
lib/QSPI_PIO/: qspi.pio.h  qspi_pio.c  qspi_pio.h
libRemoved/Touch/: FT3168.h
min_c_demo/: AMOLED_1in8.c  AMOLED_1in8.h  CMakeLists.txt  DEV_Config.c  DEV_Config.h  main.c  qspi_pio.c  qspi_pio.h
shims/hardware/: dma.h
src/: AMOLED_1in8.zig  DEV_Config.zig  amoled.zig  main.zig  qspi_pio.zig  screen.zig  usb.zig
